rs_src/bindings.rs

#[test]
fn bindgen_test_layout_rt_messagequeue() {
    const UNINIT: ::core::mem::MaybeUninit<rt_messagequeue> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<rt_messagequeue>(),
        60usize,
        concat!("Size of: ", stringify!(rt_messagequeue))
    );
    assert_eq!(
        ::core::mem::align_of::<rt_messagequeue>(),
        4usize,
        concat!("Alignment of ", stringify!(rt_messagequeue))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).parent) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_messagequeue),
            "::",
            stringify!(parent)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).msg_pool) as usize - ptr as usize },
        28usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_messagequeue),
            "::",
            stringify!(msg_pool)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).msg_size) as usize - ptr as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_messagequeue),
            "::",
            stringify!(msg_size)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).max_msgs) as usize - ptr as usize },
        34usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_messagequeue),
            "::",
            stringify!(max_msgs)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).entry) as usize - ptr as usize },
        36usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_messagequeue),
            "::",
            stringify!(entry)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).msg_queue_head) as usize - ptr as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_messagequeue),
            "::",
            stringify!(msg_queue_head)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).msg_queue_tail) as usize - ptr as usize },
        44usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_messagequeue),
            "::",
            stringify!(msg_queue_tail)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).msg_queue_free) as usize - ptr as usize },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_messagequeue),
            "::",
            stringify!(msg_queue_free)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).suspend_sender_thread) as usize - ptr as usize },
        52usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_messagequeue),
            "::",
            stringify!(suspend_sender_thread)
        )
    );
}
pub type rt_mq_t = *mut rt_messagequeue;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct rt_memory {
    #[doc = "< inherit from rt_object"]
    pub parent: rt_object,
    #[doc = "< Memory management algorithm name"]
    pub algorithm: *const core::ffi::c_char,
    #[doc = "< memory start address"]
    pub address: rt_ubase_t,
    #[doc = "< memory size"]
    pub total: rt_size_t,
    #[doc = "< size used"]
    pub used: rt_size_t,
    #[doc = "< maximum usage"]
    pub max: rt_size_t,
}
#[test]
fn bindgen_test_layout_rt_memory() {
    const UNINIT: ::core::mem::MaybeUninit<rt_memory> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<rt_memory>(),
        40usize,
        concat!("Size of: ", stringify!(rt_memory))
    );
    assert_eq!(
        ::core::mem::align_of::<rt_memory>(),
        4usize,
        concat!("Alignment of ", stringify!(rt_memory))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).parent) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_memory),
            "::",
            stringify!(parent)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).algorithm) as usize - ptr as usize },
        20usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_memory),
            "::",
            stringify!(algorithm)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).address) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_memory),
            "::",
            stringify!(address)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).total) as usize - ptr as usize },
        28usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_memory),
            "::",
            stringify!(total)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).used) as usize - ptr as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_memory),
            "::",
            stringify!(used)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).max) as usize - ptr as usize },
        36usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_memory),
            "::",
            stringify!(max)
        )
    );
}
pub type rt_mem_t = *mut rt_memory;
#[doc = " memory item on the heap"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct rt_memheap_item {
    #[doc = "< magic number for memheap"]
    pub magic: rt_uint32_t,
    #[doc = "< point of pool"]
    pub pool_ptr: *mut rt_memheap,
    #[doc = "< next memheap item"]
    pub next: *mut rt_memheap_item,
    #[doc = "< prev memheap item"]
    pub prev: *mut rt_memheap_item,
    #[doc = "< next free memheap item"]
    pub next_free: *mut rt_memheap_item,
    #[doc = "< prev free memheap item"]
    pub prev_free: *mut rt_memheap_item,
    #[doc = "< owner thread name"]
    pub owner_thread_name: [rt_uint8_t; 4usize],
}
#[test]
fn bindgen_test_layout_rt_memheap_item() {
    const UNINIT: ::core::mem::MaybeUninit<rt_memheap_item> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<rt_memheap_item>(),
        28usize,
        concat!("Size of: ", stringify!(rt_memheap_item))
    );
    assert_eq!(
        ::core::mem::align_of::<rt_memheap_item>(),
        4usize,
        concat!("Alignment of ", stringify!(rt_memheap_item))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).magic) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_memheap_item),
            "::",
            stringify!(magic)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).pool_ptr) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_memheap_item),
            "::",
            stringify!(pool_ptr)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).next) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_memheap_item),
            "::",
            stringify!(next)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).prev) as usize - ptr as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_memheap_item),
            "::",
            stringify!(prev)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).next_free) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_memheap_item),
            "::",
            stringify!(next_free)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).prev_free) as usize - ptr as usize },
        20usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_memheap_item),
            "::",
            stringify!(prev_free)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).owner_thread_name) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_memheap_item),
            "::",
            stringify!(owner_thread_name)
        )
    );
}
#[doc = " Base structure of memory heap object"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct rt_memheap {
    #[doc = "< inherit from rt_object"]
    pub parent: rt_object,
    #[doc = "< pool start address and size"]
    pub start_addr: *mut core::ffi::c_void,
    #[doc = "< pool size"]
    pub pool_size: rt_size_t,
    #[doc = "< available size"]
    pub available_size: rt_size_t,
    #[doc = "< maximum allocated size"]
    pub max_used_size: rt_size_t,
    #[doc = "< used block list"]
    pub block_list: *mut rt_memheap_item,
    #[doc = "< free block list"]
    pub free_list: *mut rt_memheap_item,
    #[doc = "< free block list header"]
    pub free_header: rt_memheap_item,
    #[doc = "< semaphore lock"]
    pub lock: rt_semaphore,
    #[doc = "< External lock mark"]
    pub locked: rt_bool_t,
}
